--- a/sample/index.html
+++ b/sample/index.html
@@ -9,7 +9,19 @@
 <button><a href = "./appointment.jsp">patients Login</a></button>
 
 
-
+<script>
+	(()=>{
+		if(window.localStorage){
+			if(!localStorage.getItem('reload')){
+				localStorage['reload'] = true
+				window.location.reload();
+			}
+			else{
+				localStorage.removeItem('reload');
+			}
+		}
+	})();
+</script> 
 
 </body>
 </html>
